--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 26 13:57:48 PDT 2015
-sdk.dir=/Users/jayharman/Library/Android/sdk
+#Wed Jan 20 10:33:03 CST 2016
+ndk.dir=/Users/omarin/Downloads/adt-bundle-mac-x86_64-20131030/sdk/ndk-bundle
+sdk.dir=/Users/omarin/Downloads/adt-bundle-mac-x86_64-20131030/sdk
